<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <ImageView
        android:layout_width="152dp"
        android:layout_height="76dp"
        android:layout_gravity="center"
        android:src="@drawable/coronavirus_logo_finali3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMediumInverse"
        android:text="SYMPTOMS"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity=""
            android:orientation="vertical"
            android:padding="10dp"

            >

            <CheckBox
                android:id="@+id/qsn01"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/black"
                android:padding="10dp"
                android:text="@string/qsn1"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/qsn02"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:padding="10dp"
                android:text="@string/qsn2"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/qsn03"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/black"

                android:padding="10dp"
                android:text="@string/qsn3"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/qsn04"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/black"
                android:padding="10dp"
                android:text="@string/qsn4"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/qsn05"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:padding="10dp"
                android:text="@string/qsn5"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/qsn06"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:padding="10dp"
                android:text="@string/qsn6"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/black" />


            <CheckBox
                android:id="@+id/qsn12"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:padding="10dp"
                android:text="@string/qsn12"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/next1"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_red"
                android:textColor="@color/deep_blue"
                android:clickable="true"
                android:padding="14dp"
                android:layout_gravity="center"
                android:text="@string/submit"

                android:layout_marginTop="8dp"
                />
        </LinearLayout>



    </ScrollView>



</LinearLayout>