<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center"
    android:background="@color/background">

    <ImageView
        android:id="@+id/gifImageView"
        android:layout_width="267dp"
        android:layout_height="168dp"
        android:src="@drawable/coronavirus_logo_finali3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="353dp"
        android:layout_height="58dp"

        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:text="@string/nresult"
        android:textAlignment="center"
        android:textColor="@color/deep_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result_pos"
        android:textAlignment="center"
        android:textColor="@color/deep_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:gravity="center"

        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/deep_blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/share"
        android:layout_width="57dp"
        android:layout_height="14dp"
        android:clickable="true"
        android:text="@string/click_here"
        android:visibility="gone"
        android:textColor="@color/deep_blue"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.079"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="215dp"
        android:layout_height="221dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/qrtest2" />

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="33dp"

        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.222" />

</androidx.constraintlayout.widget.ConstraintLayout>